# handler/todo.go
@@ -20,9 +20,11 @@ type IncomingTodo struct {
 // @Param IncomingTodo body IncomingTodo true "Todo object"
 // @Success 200 {object} map[string]interface{}
 // @Router /todo/ [post]
+// @Security BearerAuth
 func AddTodo(ctx *fiber.Ctx) error {
 	db := database.DB
 
+	// Get and parse Todo from json to struct
 	var body IncomingTodo
 
 	err := ctx.BodyParser(&body)
@@ -31,9 +33,11 @@ func AddTodo(ctx *fiber.Ctx) error {
 	}
 
 	todo := model.Todo{
-		Title: body.Title,
+		Title:  body.Title,
+		UserID: uint(ctx.Locals("user_id").(float64)),
 	}
 
+	// Insert into Todo
 	err = db.Create(&todo).Error
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Unable to add a new todo item"})
@@ -42,15 +46,20 @@ func AddTodo(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{"success": "Successfully added a new todo item"})
 }
 
-// @Summary Get all todo items
-// @Description Get all todo items
+// @Summary Get all todo items by user id
+// @Description Get all todo items by user id from login
 // @Tags Todo
 // @Produce json
 // @Success 200 {object} map[string]interface{}
 // @Router /todo/ [get]
-func GetAllTodo(ctx *fiber.Ctx) error {
+// @Security BearerAuth
+func GetAllTodoByUserID(ctx *fiber.Ctx) error {
+	userID := uint(ctx.Locals("user_id").(float64))
+
 	var todos []model.Todo
-	database.DB.Find(&todos)
+	database.DB.
+		Where("user_id = ?", userID).
+		Find(&todos)
 
 	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{"data": todos})
 }
@@ -62,16 +71,21 @@ func GetAllTodo(ctx *fiber.Ctx) error {
 // @Param id path int true "Todo ID"
 // @Success 200 {object} map[string]interface{}
 // @Router /todo/complete/{id} [patch]
+// @Security BearerAuth
 func UpdateTodoStatus(ctx *fiber.Ctx) error {
-	id, err := ctx.ParamsInt("id")
+	userID := uint(ctx.Locals("user_id").(float64))
+
+	todoID, err := ctx.ParamsInt("todo_id")
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Invalid ID"})
 	}
 
-	err = database.DB.Model(&model.Todo{}).
-		Where("ID = ?", id).
-		Update("IsCompleted", true).Error
-	if err != nil {
+	result := database.DB.
+		Model(&model.Todo{}).
+		Where("id = ? AND user_id = ?", todoID, userID).
+		Update("IsCompleted", true)
+
+	if result.Error != nil || result.RowsAffected == 0 {
 		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Unable to update todo item status"})
 	}
 
@@ -85,14 +99,20 @@ func UpdateTodoStatus(ctx *fiber.Ctx) error {
 // @Param id path int true "Todo ID"
 // @Success 200 {object} map[string]interface{}
 // @Router /todo/{id} [delete]
+// @Security BearerAuth
 func DeleteTodo(ctx *fiber.Ctx) error {
-	id, err := ctx.ParamsInt("id")
+	userID := uint(ctx.Locals("user_id").(float64))
+
+	todoID, err := ctx.ParamsInt("todo_id")
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Invalid ID"})
 	}
 
-	err = database.DB.Delete(&model.Todo{}, id).Error
-	if err != nil {
+	result := database.DB.
+		Where("id = ? AND user_id = ?", todoID, userID).
+		Delete(&model.Todo{}, todoID)
+
+	if result.Error != nil || result.RowsAffected == 0 {
 		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Unable to delete todo item"})
 	}
 
